--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # and the config file
 /manager/includes/config.inc.php
+/manager/includes/config.inc.php.blank
 
 # except do not ignore .gitignore
 !.gitignore
